"Switched to JDK 1.8"